--- a/cloudbees-core/values-custom.yaml
+++ b/cloudbees-core/values-custom.yaml
@@ -24,9 +24,11 @@ OperationsCenter:
     # ConfigMapName: oc-casc-bundle
     Retriever:
       Enabled: true
-      scmRepo: https://github.com/tomasferrarisenda/cloudbees-core-minikube-lab
+      # scmRepo: https://github.com/tomasferrarisenda/cloudbees-core-minikube-lab
+      scmRepo: https://github.com/tomasferrarisenda/cloudbees-casc
       scmBranch: main
-      scmBundlePath: "cloudbees-casc/operations-center"
+      # scmBundlePath: "cloudbees-casc/operations-center"
+      scmBundlePath: "operations-center"
 
   License:
     Evaluation:
