--- a/prometheus/values-custom.yaml
+++ b/prometheus/values-custom.yaml
@@ -1,22 +1,11 @@
 server:
   persistentVolume:
+    enabled: false
     storageClass: 'standard'
     size: 1Gi
 
   # ingress:
   #   enabled: true
-  #   annotations: {    
-  #     kubernetes.io/ingress.class: alb,
-  #     alb.ingress.kubernetes.io/scheme: internet-facing,
-  #     alb.ingress.kubernetes.io/target-type: ip,
-  #     alb.ingress.kubernetes.io/healthcheck-protocol: HTTP,
-  #     alb.ingress.kubernetes.io/healthcheck-port: traffic-port,
-  #     alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15',
-  #     alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5',
-  #     alb.ingress.kubernetes.io/success-codes: '200',
-  #     alb.ingress.kubernetes.io/healthy-threshold-count: '2',
-  #     alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
-  #   }
   #   extraPaths:
   #     - path: /
   #       backend:
@@ -28,7 +17,8 @@ server:
     
 
 alertmanager:
-  persistence:
-    size: 1Gi
-  persistentVolume:
-    storageClass: 'standard'
+  enabled: false
+  # persistence:
+  #   size: 1Gi
+  # persistentVolume:
+  #   storageClass: 'standard'
