--- a/argo-cd/values-custom.yaml
+++ b/argo-cd/values-custom.yaml
@@ -27,28 +27,11 @@ configs:
       end
       return hs
 
-    accounts.backstage-service-account: apiKey, login
-    accounts.frontend: apiKey, login
-    accounts.backend: apiKey, login
-    accounts.database: apiKey, login
 
-  rbac:
-    policy.csv: |
-      g, backstage-service-account, role:readonly
-      g, frontend, role:readonly
-      g, backend, role:readonly
-      g, database, role:readonly
-
-  secret:
-    # -- Bcrypt hashed admin password
-    ## Argo expects the password in the secret to be bcrypt hashed. You can create this hash with
-    ## `htpasswd -nbBC 10 "" $ARGO_PWD | tr -d ':\n' | sed 's/$2y/$2a/'`
-    # argocdServerAdminPassword: '$2a$10$0vz/zfXVeaLyOZkGQO6tgO15gOSf6P.zCpsLvJ8slkrOQe.Wq42W.' # admin
-
-    extra:
-      ## Argo expects the password in the secret to be bcrypt hashed. You can create this hash with
-      ## `htpasswd -nbBC 10 "" $ARGO_PWD | tr -d ':\n' | sed 's/$2y/$2a/'`
-      accounts.backstage-service-account.password: '$2a$10$dcoQrqTuhzk4VTLpehzmjOL29zSba8w/08rLGbiXiqbYGGEZMYJBu' # backstage
-      accounts.frontend.password: '$2a$10$LldyQmOa7/KCtnB4uyeA4.lBXJScLWyUCmS5MSebZpPXgJXLE9bye' # frontend
-      accounts.backend.password: '$2a$10$IaI7yXLoWiQ.XlzZmAUxFOhEWgK8Fm21bZ/vtUBufK9yZnt7EUsri' # backend
-      accounts.database.password: '$2a$10$4NRIsDFel0OaYPy9bAgedeycShVrK2kTNUap4TzHoFm1bUpjuE/z2' # database
+server:
+  ingress:
+    # -- Enable an ingress resource for the Argo CD server
+    enabled: true
+    ingressClassName: "nginx"
+    hosts:
+      - argocd.local.com
