--- a/argo-cd/values-custom.yaml
+++ b/argo-cd/values-custom.yaml
@@ -31,7 +31,7 @@ configs:
 server:
   ingress:
     # -- Enable an ingress resource for the Argo CD server
-    enabled: true
+    enabled: false
     ingressClassName: "nginx"
     hosts:
       - argocd.local
